--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
@@ -55,6 +56,10 @@ dependencies {
     // rxjava2 for room
     implementation "android.arch.persistence.room:rxjava2:1.0.0"
 
+    // dagger2
+    implementation 'com.google.dagger:dagger:2.14'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.14'
+    implementation 'com.google.dagger:dagger-android-support:2.11' // if you use the support libraries
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
 
-    implementation 'com.android.support:cardview-v7:27.1.1'
 }
